[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hulld"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aya = { version = "0.13", features = ["async_tokio"] }
clap = { version = "4" }
hull = { path = ".." }
libc = "0.2"
ipnetwork = "0.20.0"
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

