[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hulld"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aya = "0.13"
clap = { version = "4" }
hull = { path = ".." }
libc = "0.2"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
